<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FuncoesActivity">




<androidx.constraintlayout.widget.ConstraintLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/background"
tools:context=".LoginActivity">


<ImageView
    android:id="@+id/onibus"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:src="@drawable/onibus"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>


<View

    android:id="@+id/containerComponents"
    style="@style/ContainerComponents"
    android:layout_width="371dp"
    android:layout_height="316dp"
    android:layout_marginTop="28dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.6"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/onibus" />

<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/bt_rota"
    style="@style/Button"
    android:layout_marginTop="76dp"
    android:text="@string/rota"
    android:textAllCaps="false"
    android:textColor="@color/white"
    android:textSize="22sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/onibus" />

<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/bt_passagem"
    style="@style/Button"
    android:layout_marginTop="172dp"
    android:text="@string/passagem"
    android:textAllCaps="false"
    android:textColor="@color/white"
    android:textSize="22sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.612"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/onibus" />

<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/bt_catraca"
    style="@style/Button"
    android:layout_marginTop="24dp"
    android:text="@string/catraca"
    android:textAllCaps="false"
    android:textColor="@color/white"
    android:textSize="22sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/bt_passagem" />


</androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>