<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">




<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">
    
    
    <ImageView
        android:id="@+id/onibus"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/onibus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <View

        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onibus" />

    <EditText
    android:id="@+id/edit_email"
    style="@style/Edit_Text"
    android:hint="Usuario"
    android:drawableRight="@drawable/ic_email_24"
    app:layout_constraintEnd_toEndOf="@id/containerComponents"
    app:layout_constraintStart_toStartOf="@id/containerComponents"
    app:layout_constraintTop_toTopOf="@id/containerComponents" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:hint="Senha"
        android:drawableRight="@drawable/ic_eye"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_entrar"
        style="@style/Button"
        android:layout_marginTop="112dp"
        android:text="@string/entrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha" />

    <CheckBox
        android:id="@+id/lembrarsenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lembra_senha"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/bt_entrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />






    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_entrar" />



    <TextView
        android:id="@+id/text_tela_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cadastro"
        app:layout_constraintTop_toBottomOf="@id/lembrarsenha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>





</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>
